[package]
name = "moonshine-check"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Validation and recovery solution for Bevy"
categories = ["game-development"]
keywords = ["bevy", "ecs", "type-safety"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_check"
repository = "https://github.com/Zeenobit/moonshine_check"

[dependencies]
bevy_app = "0.16.*"
bevy_ecs = "0.16.*"
bevy_log = "0.16.*"
moonshine-kind = { version = "0.2.2", path = "../kind" }
moonshine-save = { version = "0.4.0", path = "../save" }
moonshine-util = { version = "0.3.0", path = "../util" }

[dev-dependencies]
bevy = "0.16.*"
